adding multiple component example

--- a/src/client/app/index.html
+++ b/src/client/app/index.html
@@ -6,6 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
+		<div id='header'></div>
 		<div id='app'></div>
+		<div id='footer'></div>
 	</body>
 </html>
